# sySim

./: .gitignore  CMakeLists.txt  README.md
lib/: CMakeLists.txt
lib/eventqueue/: eventqueue.c  eventqueue.h
lib/logger/: log.c  log.h
lib/package/: package.c  package.h
lib/priorityqueue/: priorityqueue.c  priorityqueue.h
lib/protocol/: protocol.c  protocol.h  side.h
lib/queue/: queue.c  queue.h
lib/softwareinterface/: softwareinterface.c  softwareinterface.h
lib/time/: time.c  time.h
protocols/: CMakeLists.txt  alternating_bit.c  blankprotocol.c  noMessagesSent.c  wrong_order.c
src/: main.c  sySim.ggo  sySym.ggo
src/argparse/: argparse.c  argparse.h
src/simulator/: simulator.c  simulator.h
