add_library(
	sySimLib
	${CMAKE_CURRENT_LIST_DIR}/logger/log.c
	${CMAKE_CURRENT_LIST_DIR}/package/package.c
	${CMAKE_CURRENT_LIST_DIR}/priorityqueue/priorityqueue.c
	${CMAKE_CURRENT_LIST_DIR}/protocol/protocol.c
	${CMAKE_CURRENT_LIST_DIR}/time/time.c
	${CMAKE_CURRENT_LIST_DIR}/eventqueue/eventqueue.c
)
